<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".botDoctor.BotDoctor"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_layout_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_message"
            android:inputType="textMultiLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight=".5"
            android:background="@drawable/chat_edit_text"
            android:fontFamily="casual"
            android:hint="@string/ask_me_anything"
            android:textColorHint="#fff"
            android:textSize="14sp"
            android:padding="15dp"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/voice_message"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:background="@color/background"
            android:src="@drawable/ic_baseline_mic_24"/>

        <ImageButton
            android:id="@+id/btn_send"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:background="@color/background"
            android:src="@drawable/ic_baseline_send_24"/>

    </LinearLayout>

<!--    <ImageView-->
<!--        android:id="@+id/botIcon"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_below="@+id/dark_divider"-->
<!--        android:src="@drawable/ic_baseline_adb_24"/>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_messages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_layout_bar"
        android:layout_below="@+id/home"
        tools:itemCount="20"
        tools:listitem="@layout/message_item"
        android:background="@color/background"/>
<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        android:layout_marginStart="40dp"-->
<!--        android:layout_marginEnd="40dp"-->
<!--        android:layout_below="@+id/home"-->
<!--        android:background="@color/colorPrimary"-->
<!--        android:backgroundTint="#B2F4F2"-->
<!--        android:id="@+id/dark_divider"/>-->


</RelativeLayout>
